# rolling_stock

./: .gitignore  Makefile  QUICKSTART.md  README.md  XML_FORMAT.md  example_units_analysis.py  example_usage.py  main.py  ndov_train_composition.py  pyproject.toml  test_parser.py  train_compositions.json
examples/: example_units_analysis.py  example_usage.py
src/: __init__.py  ndov_train_composition.py
tests/: conftest.py  test_ndov_parser.py  test_parser.py
tests/fixtures/: dvs_sample.xml  gtw_articulated.xml  rit_sample.xml
